--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -33,16 +33,16 @@
 
 html {
   font-size: 62.5%; }
-  @media (max-width: 112.5em) {
+  @media only screen and (max-width: 112.5em) {
     html {
       font-size: 65%; } }
-  @media (max-width: 75em) {
+  @media only screen and (max-width: 75em) {
     html {
       font-size: 56%; } }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     html {
       font-size: 50%; } }
-  @media (max-width: 37.5em) {
+  @media only screen and (max-width: 37.5em) {
     html {
       font-size: 35%; } }
 
@@ -54,9 +54,13 @@ body {
   color: #777;
   padding: 2rem;
   box-sizing: border-box; }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     body {
       padding: 0; } }
+
+::selection {
+  background-color: #55c57a;
+  color: #fff; }
 
 .heading-primary {
   color: #ffff;
@@ -70,7 +74,7 @@ body {
     letter-spacing: 3.5rem;
     animation-name: moveInLeft;
     animation-duration: 1s; }
-    @media (max-width: 37.5em) {
+    @media only screen and (max-width: 37.5em) {
       .heading-primary--main {
         letter-spacing: 1.8rem;
         font-size: 5rem; } }
@@ -91,7 +95,7 @@ body {
   -webkit-background-clip: text;
   color: transparent;
   transition: all .2s; }
-  @media (max-width: 37.5em) {
+  @media only screen and (max-width: 37.5em) {
     .heading-secondary {
       font-size: 2.5rem; } }
   .heading-secondary:hover {
@@ -102,13 +106,13 @@ body {
   font-size: 1.8rem;
   font-weight: 700;
   text-transform: uppercase; }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     .heading-tertiary {
       font-size: 2.2rem; } }
 
 .paragraph {
   font-size: 1.5rem; }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     .paragraph {
       font-size: 2rem; } }
   .paragraph:not(:last-child) {
@@ -209,7 +213,7 @@ body {
     z-index: 10;
     transition: all 0.2s;
     outline-offset: 1.2rem; }
-    @media (max-width: 56.25em) {
+    @media only screen and (max-width: 56.25em) {
       .composition__photo {
         float: left;
         position: relative;
@@ -218,13 +222,13 @@ body {
     .composition__photo--p1 {
       left: 0;
       top: -2rem; }
-      @media (max-width: 56.25em) {
+      @media only screen and (max-width: 56.25em) {
         .composition__photo--p1 {
           top: 1rem;
           transform: scale(1.2); } }
     .composition__photo--p2 {
       right: 0; }
-      @media (max-width: 56.25em) {
+      @media only screen and (max-width: 56.25em) {
         .composition__photo--p2 {
           top: -1rem;
           transform: scale(1.3);
@@ -232,7 +236,7 @@ body {
     .composition__photo--p3 {
       left: 20%;
       top: 10rem; }
-      @media (max-width: 56.25em) {
+      @media only screen and (max-width: 56.25em) {
         .composition__photo--p3 {
           top: 0;
           left: 0;
@@ -253,10 +257,10 @@ body {
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: all .2s; }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     .feature-box {
       font-size: 1.8rem; } }
-  @media (max-width: 37.5em) {
+  @media only screen and (max-width: 37.5em) {
     .feature-box {
       font-size: 2.3rem; } }
   .feature-box__icon {
@@ -266,10 +270,10 @@ body {
     display: inline-block;
     -webkit-background-clip: text;
     color: transparent; }
-    @media (max-width: 56.25em) {
+    @media only screen and (max-width: 56.25em) {
       .feature-box__icon {
         font-size: 5rem; } }
-    @media (max-width: 37.5em) {
+    @media only screen and (max-width: 37.5em) {
       .feature-box__icon {
         font-size: 6rem; } }
   .feature-box:hover {
@@ -280,10 +284,10 @@ body {
   perspective: 150rem;
   position: relative;
   height: 40rem; }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     .card {
       height: 50rem; } }
-  @media (max-width: 37.5em) {
+  @media only screen and (max-width: 37.5em) {
     .card {
       height: 55rem; } }
   .card__side {
@@ -298,10 +302,10 @@ body {
     border-radius: 3px;
     overflow: hidden;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
-    @media (max-width: 56.25em) {
+    @media only screen and (max-width: 56.25em) {
       .card__side {
         height: 50rem; } }
-    @media (max-width: 37.5em) {
+    @media only screen and (max-width: 37.5em) {
       .card__side {
         height: 55rem; } }
     .card__side--front {
@@ -324,7 +328,7 @@ body {
     background-blend-mode: screen;
     -webkit-background-clip: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
-    @media (max-width: 56.25em) {
+    @media only screen and (max-width: 56.25em) {
       .card__picture {
         height: 25rem; } }
     .card__picture-1 {
@@ -343,11 +347,11 @@ body {
     right: 2rem;
     text-align: right;
     width: 75%; }
-    @media (max-width: 56.25em) {
+    @media only screen and (max-width: 56.25em) {
       .card__heading {
         top: 17rem;
         font-size: 3rem; } }
-    @media (max-width: 37.5em) {
+    @media only screen and (max-width: 37.5em) {
       .card__heading {
         font-size: 3.4rem; } }
     .card__heading-span {
@@ -368,10 +372,10 @@ body {
       font-size: 1.3rem;
       text-align: center;
       padding: .8rem; }
-      @media (max-width: 56.25em) {
+      @media only screen and (max-width: 56.25em) {
         .card__details ul li {
           font-size: 1.8rem; } }
-      @media (max-width: 37.5em) {
+      @media only screen and (max-width: 37.5em) {
         .card__details ul li {
           font-size: 2.3rem; } }
       .card__details ul li:not(:last-child) {
@@ -390,19 +394,19 @@ body {
   .card__price-only {
     font-size: 1.4rem;
     text-transform: uppercase; }
-    @media (max-width: 56.25em) {
+    @media only screen and (max-width: 56.25em) {
       .card__price-only {
         font-size: 1.8rem; } }
-    @media (max-width: 37.5em) {
+    @media only screen and (max-width: 37.5em) {
       .card__price-only {
         font-size: 2rem; } }
   .card__price-value {
     font-size: 4rem;
     font-weight: 300; }
-    @media (max-width: 56.25em) {
+    @media only screen and (max-width: 56.25em) {
       .card__price-value {
         font-size: 4.5rem; } }
-    @media (max-width: 37.5em) {
+    @media only screen and (max-width: 37.5em) {
       .card__price-value {
         font-size: 5rem; } }
 
@@ -414,7 +418,7 @@ body {
   font-size: 1.6rem;
   transform: skewX(-10deg);
   background: #fff; }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     .story {
       width: 100%; } }
   .story > * {
@@ -608,7 +612,7 @@ body {
   @media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em) {
     .header {
       background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg); } }
-  @media (max-width: 37.5em) {
+  @media only screen and (max-width: 37.5em) {
     .header {
       clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); } }
   .header__logo-box {
@@ -627,12 +631,12 @@ body {
 .row {
   max-width: 114rem;
   margin: 0 auto; }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     .row {
       max-width: 55rem !important; } }
   .row:not(:last-child) {
     margin-bottom: 6rem; }
-    @media (max-width: 56.25em) {
+    @media only screen and (max-width: 56.25em) {
       .row:not(:last-child) {
         margin-bottom: 6rem; } }
   .row::after {
@@ -643,11 +647,11 @@ body {
     float: left; }
     .row [class^="col-"]:not(:last-child) {
       margin-right: 5rem; }
-      @media (max-width: 56.25em) {
+      @media only screen and (max-width: 56.25em) {
         .row [class^="col-"]:not(:last-child) {
           margin-right: 0;
           margin-bottom: 6rem; } }
-    @media (max-width: 56.25em) {
+    @media only screen and (max-width: 56.25em) {
       .row [class^="col-"] {
         width: 100% !important; } }
   .row .col-1-of-2 {
@@ -666,7 +670,7 @@ body {
 .footer {
   background-color: #333;
   padding: 7rem 0 5rem 0; }
-  @media (max-width: 37.5em) {
+  @media only screen and (max-width: 37.5em) {
     .footer {
       padding: 5rem 0 3rem 0; } }
   .footer__logo-box {
@@ -679,7 +683,7 @@ body {
     border-top: 1px solid #ccc;
     padding-top: 2rem;
     display: inline-block; }
-    @media (max-width: 56.25em) {
+    @media only screen and (max-width: 56.25em) {
       .footer__navigation {
         width: 100%;
         text-align: center;
@@ -709,7 +713,7 @@ body {
     float: right;
     color: #f7f7f7;
     font-size: 1.2rem; }
-    @media (max-width: 56.25em) {
+    @media only screen and (max-width: 56.25em) {
       .footer__copyright {
         font-size: 1.7rem;
         text-align: center;
@@ -830,7 +834,7 @@ body {
   background-color: #f7f7f7;
   padding: 22rem 0 18rem 0;
   margin-top: -20vh; }
-  @media (max-width: 37.5em) {
+  @media only screen and (max-width: 37.5em) {
     .section-about {
       margin-top: -15vh; } }
 
@@ -843,7 +847,7 @@ body {
   text-align: center;
   margin-top: -10rem;
   transform: skewY(-7deg); }
-  @media (max-width: 37.5em) {
+  @media only screen and (max-width: 37.5em) {
     .section-features {
       padding: 15rem 0; } }
   .section-features > * {
@@ -867,12 +871,12 @@ body {
   background-size: cover;
   border-radius: 3px;
   box-shadow: 0 1.4rem 3rem rgba(0, 0, 0, 0.3); }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25em) {
     .book {
       background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.9) 65%, transparent 65%), url(../img/nat-10.jpg); } }
   .book__form {
     width: 50%;
     padding: 3rem; }
-    @media (max-width: 56.25em) {
+    @media only screen and (max-width: 56.25em) {
       .book__form {
         width: 65%; } }
